force-app/main/default/objects/Contact/fields/Child_Age__c.field-meta.xml
<CustomField>
    <fullName>Child_Age__c</fullName>
    <formula>YEAR(TODAY()) - YEAR( Birthdate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>