force-app/main/default/objects/Contact/fields/Child_Grade__c.field-meta.xml
<CustomField>
    <fullName>Child_Grade__c</fullName>
    <label>Grade</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>