force-app/main/default/objects/Contact/fields/Form_is_Active__c.field-meta.xml
<CustomField>
    <fullName>Form_is_Active__c</fullName>
    <formula>General_Release_Form__r.Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form is Active?</label>
    <type>Checkbox</type>
</CustomField>