force-app/main/default/objects/Contact/fields/General_Release_Form__c.field-meta.xml
<CustomField>
    <fullName>General_Release_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Release Form</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Form__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>General Release</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Form__c</referenceTo>
    <relationshipLabel>Contacts (General Release Form)</relationshipLabel>
    <relationshipName>Child</relationshipName>
    <type>Lookup</type>
</CustomField>