force-app/main/default/objects/Contact/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grade</label>
    <referenceTo>Form__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>