force-app/main/default/objects/Contact/fields/My_Household_Contacts__c.field-meta.xml
<CustomField>
    <fullName>My_Household_Contacts__c</fullName>
    <formula>AccountId =  $User.Account_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Household Contacts</label>
    <type>Checkbox</type>
</CustomField>