force-app/main/default/objects/Contact/fields/Parent_Contact__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Parent Contact)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>