force-app/main/default/objects/Contact/fields/Photography_Permitted__c.field-meta.xml
<CustomField>
    <fullName>Photography_Permitted__c</fullName>
    <label>Photography Permitted?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allowed</fullName>
            </value>
            <value>
                <fullName>Not Allowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>