force-app/main/default/objects/Contact/recordTypes/Event_Coordinator.recordType-meta.xml
<RecordType>
    <fullName>Event_Coordinator</fullName>
    <active>true</active>
    <label>Event Coordinator</label>
</RecordType>